--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,27 @@
 /* write your override styles here */
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
+}
+
+#wall .tag-1 {
+    display: none;
+}
+
+#wall .tag-1,
+#wall #tag-2,
+#wall #tag-3,
+#wall #tag-4,
+#wall #tag-5,
+#wall #tag-6,
+#wall #tag-7 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
